# rust-mail-client

./: .gitignore  Cargo.toml
src/: main.rs
