[package]
name = "rust-mail-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
dotenvy = "0.15.7"
log = "0.4.29"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.26", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread"] }
